# acdp-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: bindings.yml  ci.yml  release-plz.yml
bindings/acdp-node/: Cargo.toml  README.md  package.json
bindings/acdp-node/src/: helpers.rs  lib.rs  producer.rs  verifier.rs
bindings/acdp-node/tests/: test.mjs
bindings/acdp-py/: Cargo.toml  README.md  pyproject.toml
bindings/acdp-py/src/: helpers.rs  lib.rs  producer.rs  verifier.rs
bindings/acdp-py/tests/: test_producer.py
bindings/interop/: README.md  node_worker.mjs  test_interop.py
examples/: consumer.rs  producer.rs
src/: error.rs  lib.rs  limits.rs  profile.rs  safe_http.rs  time.rs  validation.rs
src/client/: cross_registry.rs  data_ref.rs  mod.rs  registry.rs  verified.rs
src/crypto/: hash.rs  jcs.rs  mod.rs  sign.rs  verify.rs
src/did/: document.rs  mod.rs  web.rs
src/producer/: builder.rs  mod.rs
src/registry/: mod.rs  rate_limit.rs  safe_http.rs  server.rs  store.rs  validator.rs
src/types/: body.rs  capabilities.rs  data_ref.rs  mod.rs  primitives.rs  publish.rs  search.rs  serde_helpers.rs
tests/: cli.rs  conformance.rs  golden_vector.rs  proptest_jcs.rs  registry_client.rs  tls_conformance.rs  wire_serialization.rs
tests/common/: mod.rs
